--- a/.github/workflows/codex-review-gate.yml
+++ b/.github/workflows/codex-review-gate.yml
@@ -191,6 +191,21 @@ jobs:
               per_page: 100,
             });
 
+            const issueEvents = await github.paginate(github.rest.issues.listEvents, {
+              owner,
+              repo,
+              issue_number: prNumber,
+              per_page: 100,
+            });
+
+            const latestSynchronizeEvent = issueEvents
+              .filter((event) => event.event === 'synchronize')
+              .sort((a, b) => parseDate(a.created_at) - parseDate(b.created_at))
+              .pop();
+            const latestHeadUpdateAt = latestSynchronizeEvent
+              ? parseDate(latestSynchronizeEvent.created_at)
+              : parseDate(pull.created_at);
+
             const commitIndexBySha = new Map();
             commits.forEach((commit, idx) => {
               if (commit.sha) commitIndexBySha.set(commit.sha, idx);
@@ -221,10 +236,15 @@ jobs:
             const latestReviewRequestAt = latestReviewRequest ? parseDate(latestReviewRequest.created_at) : null;
 
             if (hasSubsequentCycle) {
-              if (!latestReviewRequestAt || latestReviewRequestAt.getTime() <= latestCodexResponseAt.getTime()) {
+              if (!latestReviewRequestAt || latestReviewRequestAt.getTime() < latestHeadUpdateAt.getTime()) {
                 core.setFailed('Missing "@codex review" comment after latest push. The first review cycle is automatic; subsequent cycles require an explicit request.');
                 return;
               }
+            }
+
+            if (latestCodexResponseAt.getTime() < latestHeadUpdateAt.getTime()) {
+              core.setFailed('Missing codex response newer than the latest PR head update.');
+              return;
             }
 
             if (latestReviewRequestAt && latestCodexResponseAt.getTime() < latestReviewRequestAt.getTime()) {
